# shader-slang-issue

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  shader.slang  vcpkg.json
src/: main.cpp
